--- a/TSN_Pipeline.ipynb
+++ b/TSN_Pipeline.ipynb
@@ -45,7 +45,7 @@
       "source": [
         "!pip install openmim\n",
         "!mim install mmengine\n",
-        "# !pip install mmcv==2.1.0 -f https://download.openmmlab.com/mmcv/dist/cu118/torch2.1/index.html"
+        "!pip install mmcv==2.1.0 -f https://download.openmmlab.com/mmcv/dist/cu118/torch2.1/index.html"
       ],
       "metadata": {
         "colab": {
@@ -162,21 +162,8 @@
       "cell_type": "code",
       "source": [
         "!mkdir checkpoints\n",
-        "!wget -c https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_1x1x3_100e_kinetics400_rgb/tsn_r50_1x1x3_100e_kinetics400_rgb_20200616-e9b6ebf5.pth -O checkpoints/tsn_r50_1x1x3_100e_kinetics400_rgb.pth\n",
-        "!wget -c https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_1x1x3_50e_sthv2_rgb/tsn_r50_1x1x3_50e_sthv2_rgb_20210324-e8e5b019.pth -O checkpoints/tsn_r50_1x1x3_50e_sthv2_rgb.pth\n",
-        "!wget -c https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_video_inference/tsn_r50_video_inference_20210129-e9b1bc5d.pth -O checkpoints/tsn_r50_video_inference.pth\n",
-        "!wget -c https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_3d_1x1x3_50e_kinetics400_flow/tsn_r50_3d_1x1x3_50e_kinetics400_flow_20200616-7dfc7b8a.pth -O checkpoints/tsn_r50_3d_1x1x3_50e_kinetics400_flow.pth\n",
-        "!wget -c https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_3d_1x1x3_50e_kinetics400_rgb/tsn_r50_3d_1x1x3_50e_kinetics400_rgb_20200616-1c7b490d.pth -O checkpoints/tsn_r50_3d_1x1x3_50e_kinetics400_rgb.pth\n",
-        "!wget -c https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r101_1x1x3_100e_kinetics400_rgb/tsn_r101_1x1x3_100e_kinetics400_rgb_20200616-b7ecfe70.pth -O checkpoints/tsn_r101_1x1x3_100e_kinetics400_rgb.pth\n",
-        "\n",
         "# Download TSN R50 model trained on Kinetics-400 RGB dataset\n",
         "!wget https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_1x1x3_100e_kinetics400_rgb/tsn_r50_1x1x3_100e_kinetics400_rgb_20200614-e508be42.pth -P checkpoints/\n",
-        "\n",
-        "# Download TSN R50 model trained on HMDB51 RGB dataset\n",
-        "!wget https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_1x1x8_50e_hmdb51_imagenet_rgb/tsn_r50_1x1x8_50e_hmdb51_imagenet_rgb_20201025-0c3b1fdc.pth -P checkpoints/\n",
-        "\n",
-        "# Download TSN R50 model trained on UCF101 RGB dataset\n",
-        "!wget https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_1x1x8_50e_ucf101_imagenet_rgb/tsn_r50_1x1x8_50e_ucf101_imagenet_rgb_20201025-6f8c0cce.pth -P checkpoints/\n"
       ],
       "metadata": {
         "id": "Z53tO3nRyTMe",
@@ -191,42 +178,6 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-12-28 17:24:01--  https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_1x1x3_100e_kinetics400_rgb/tsn_r50_1x1x3_100e_kinetics400_rgb_20200616-e9b6ebf5.pth\n",
-            "Resolving download.openmmlab.com (download.openmmlab.com)... 163.181.82.164, 163.181.82.169, 163.181.82.165, ...\n",
-            "Connecting to download.openmmlab.com (download.openmmlab.com)|163.181.82.164|:443... connected.\n",
-            "HTTP request sent, awaiting response... 404 Not Found\n",
-            "2024-12-28 17:24:03 ERROR 404: Not Found.\n",
-            "\n",
-            "--2024-12-28 17:24:03--  https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_1x1x3_50e_sthv2_rgb/tsn_r50_1x1x3_50e_sthv2_rgb_20210324-e8e5b019.pth\n",
-            "Resolving download.openmmlab.com (download.openmmlab.com)... 163.181.82.164, 163.181.82.169, 163.181.82.165, ...\n",
-            "Connecting to download.openmmlab.com (download.openmmlab.com)|163.181.82.164|:443... connected.\n",
-            "HTTP request sent, awaiting response... 404 Not Found\n",
-            "2024-12-28 17:24:04 ERROR 404: Not Found.\n",
-            "\n",
-            "--2024-12-28 17:24:04--  https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_video_inference/tsn_r50_video_inference_20210129-e9b1bc5d.pth\n",
-            "Resolving download.openmmlab.com (download.openmmlab.com)... 163.181.82.164, 163.181.82.169, 163.181.82.165, ...\n",
-            "Connecting to download.openmmlab.com (download.openmmlab.com)|163.181.82.164|:443... connected.\n",
-            "HTTP request sent, awaiting response... 404 Not Found\n",
-            "2024-12-28 17:24:06 ERROR 404: Not Found.\n",
-            "\n",
-            "--2024-12-28 17:24:06--  https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_3d_1x1x3_50e_kinetics400_flow/tsn_r50_3d_1x1x3_50e_kinetics400_flow_20200616-7dfc7b8a.pth\n",
-            "Resolving download.openmmlab.com (download.openmmlab.com)... 163.181.82.164, 163.181.82.169, 163.181.82.165, ...\n",
-            "Connecting to download.openmmlab.com (download.openmmlab.com)|163.181.82.164|:443... connected.\n",
-            "HTTP request sent, awaiting response... 404 Not Found\n",
-            "2024-12-28 17:24:07 ERROR 404: Not Found.\n",
-            "\n",
-            "--2024-12-28 17:24:07--  https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_3d_1x1x3_50e_kinetics400_rgb/tsn_r50_3d_1x1x3_50e_kinetics400_rgb_20200616-1c7b490d.pth\n",
-            "Resolving download.openmmlab.com (download.openmmlab.com)... 163.181.82.164, 163.181.82.169, 163.181.82.165, ...\n",
-            "Connecting to download.openmmlab.com (download.openmmlab.com)|163.181.82.164|:443... connected.\n",
-            "HTTP request sent, awaiting response... 404 Not Found\n",
-            "2024-12-28 17:24:08 ERROR 404: Not Found.\n",
-            "\n",
-            "--2024-12-28 17:24:08--  https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r101_1x1x3_100e_kinetics400_rgb/tsn_r101_1x1x3_100e_kinetics400_rgb_20200616-b7ecfe70.pth\n",
-            "Resolving download.openmmlab.com (download.openmmlab.com)... 163.181.82.164, 163.181.82.169, 163.181.82.165, ...\n",
-            "Connecting to download.openmmlab.com (download.openmmlab.com)|163.181.82.164|:443... connected.\n",
-            "HTTP request sent, awaiting response... 404 Not Found\n",
-            "2024-12-28 17:24:10 ERROR 404: Not Found.\n",
-            "\n",
             "--2024-12-28 17:24:10--  https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_1x1x3_100e_kinetics400_rgb/tsn_r50_1x1x3_100e_kinetics400_rgb_20200614-e508be42.pth\n",
             "Resolving download.openmmlab.com (download.openmmlab.com)... 163.181.82.164, 163.181.82.169, 163.181.82.165, ...\n",
             "Connecting to download.openmmlab.com (download.openmmlab.com)|163.181.82.164|:443... connected.\n",
@@ -235,21 +186,6 @@
             "Saving to: ‘checkpoints/tsn_r50_1x1x3_100e_kinetics400_rgb_20200614-e508be42.pth’\n",
             "\n",
             "tsn_r50_1x1x3_100e_ 100%[===================>]  93.06M  54.2MB/s    in 1.7s    \n",
-            "\n",
-            "2024-12-28 17:24:12 (54.2 MB/s) - ‘checkpoints/tsn_r50_1x1x3_100e_kinetics400_rgb_20200614-e508be42.pth’ saved [97579339/97579339]\n",
-            "\n",
-            "--2024-12-28 17:24:12--  https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_1x1x8_50e_hmdb51_imagenet_rgb/tsn_r50_1x1x8_50e_hmdb51_imagenet_rgb_20201025-0c3b1fdc.pth\n",
-            "Resolving download.openmmlab.com (download.openmmlab.com)... 163.181.82.164, 163.181.82.169, 163.181.82.165, ...\n",
-            "Connecting to download.openmmlab.com (download.openmmlab.com)|163.181.82.164|:443... connected.\n",
-            "HTTP request sent, awaiting response... 404 Not Found\n",
-            "2024-12-28 17:24:13 ERROR 404: Not Found.\n",
-            "\n",
-            "--2024-12-28 17:24:13--  https://download.openmmlab.com/mmaction/recognition/tsn/tsn_r50_1x1x8_50e_ucf101_imagenet_rgb/tsn_r50_1x1x8_50e_ucf101_imagenet_rgb_20201025-6f8c0cce.pth\n",
-            "Resolving download.openmmlab.com (download.openmmlab.com)... 163.181.82.164, 163.181.82.169, 163.181.82.165, ...\n",
-            "Connecting to download.openmmlab.com (download.openmmlab.com)|163.181.82.164|:443... connected.\n",
-            "HTTP request sent, awaiting response... 404 Not Found\n",
-            "2024-12-28 17:24:13 ERROR 404: Not Found.\n",
-            "\n"
           ]
         }
       ]
